# ChangeLog for dev-ruby/maruku
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/maruku/ChangeLog,v 1.4 2008/09/02 06:04:27 graaff Exp $

*maruku-0.5.9 (02 Sep 2008)

  02 Sep 2008; Hans de Graaff <graaff@gentoo.org> +maruku-0.5.9.ebuild:
  Version bump, closing #236409

*maruku-0.5.7 (07 Oct 2007)

  07 Oct 2007; Aggelos Orfanakos <agorf@gentoo.org> +maruku-0.5.7.ebuild:
  Version bump to 0.5.7.

*maruku-0.5.6 (24 May 2007)

  24 May 2007; Aggelos Orfanakos <agorf@gentoo.org> -maruku-0.5.5.ebuild,
  +maruku-0.5.6.ebuild:
  Version bump to 0.5.6.

*maruku-0.5.5 (01 May 2007)

  01 May 2007; Aggelos Orfanakos <agorf@gentoo.org> +maruku-0.5.5.ebuild:
  Initial ebuild.
