@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST maruku-0.5.6.gem 173056 RMD160 5a24c7b5cbe29dee92dc03f19668f338b3c65b06 SHA1 64142b1812e4b2f1262c04447af8836ab8312e88 SHA256 4c0c3d4b51b23c135ed52e9eb49817d37463b4eb126964854a0ce9482dda7c15
-DIST maruku-0.5.7.gem 171520 RMD160 7aba8087fa3134fc42811ad25506fb7a4dde436b SHA1 e8f0a022621603768d5075818ef06997e5204856 SHA256 4bef6452d22738757dd6c6d06e5793f0938c25a3a7fc147dcbb01de03ec7d71a
 DIST maruku-0.5.9.gem 188416 RMD160 04de86f042cdc87732bb0e48d96deba862547972 SHA1 9b0617baa8046dbdf643ac1f9ee83cdbaf15a248 SHA256 ce80358f19c5c9d6f75163b894b4b1570b605fdf2fb11178d29f015d4a3d191f
-EBUILD maruku-0.5.6.ebuild 772 RMD160 28d4514da5f6f252e240d0ad6e1fb6c1bf0f0d4d SHA1 459b4e1bbf3753ba49e235b97909bb5fe1a6ac07 SHA256 d60341209f6bf7fe49812e259030c13a890448ab1b818ec399320214930c2695
-EBUILD maruku-0.5.7.ebuild 753 RMD160 84f22da2affced852d5fd10b6287cf0f7719c646 SHA1 2ef31c197c9f28d97f103e010c822870e142bdfe SHA256 5afb074936362480baa99c6485f68b6c90e4278b5c694602f0cee41c86cc5785
-EBUILD maruku-0.5.9.ebuild 711 RMD160 0a0eb9ba50c2b4562f56bafade232816bc71c46d SHA1 0f4f3da915b916d4a1a53cd30c3deb2fed22a315 SHA256 900dc4b3c0b1ffbb32679013a2bfd19a3b411bb263c1495c2b1d7815feaf5718
-MISC ChangeLog 741 RMD160 16892ec07a9aec61fd99d33b0926ddf3b37efa0e SHA1 69c5671ed781b83a8beb971f1a35b3ae182d1b6b SHA256 ec214a0955b9dbcf815461f98090ee5d1e47ef14fcc8fd179f798641473d0ca2
+DIST maruku-0.6.0.gem 151040 RMD160 e959dd617ca3b681ec58e96c2119ed79b93d9d89 SHA1 8a300457a4c492dd2be3f3a13337147bd5b42393 SHA256 dfd87f9b262521bad2b71290f36ec0548d32dc438c701ece2ed407fec8fb314c
+EBUILD maruku-0.5.9.ebuild 713 RMD160 7775ec1261bb4262ae2a064e6f48441ec3b95872 SHA1 83fec9ba030648744a6dfa9e92cdf8555957654d SHA256 55cecf0dedd8741807155bb82e015e7485e20d871c03ee72ae9081a120196b56
+EBUILD maruku-0.6.0.ebuild 732 RMD160 78c8d3d9f93bf6eb808c2b576358ffa0e7aca616 SHA1 dee8ddc217f2e5848d5454a34d429a4b11ae1f06 SHA256 2dd3151aa5c9bbc73f9b76cc37b289bf17fe2bc4f53029486f948f8bd997fc93
+MISC ChangeLog 1044 RMD160 7051cce9e25ef1025a7d8e624dc22035493249ef SHA1 4d40c5976e899e420edc72907d31ef08bd129965 SHA256 aae288a357940627a7819d22356342a4e048cb3da77693f85ba9ac4b49d78222
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.9 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAki813cACgkQCzgcb6sPj48o3gCeNvPW9b9lleRiRIsBXHjgEHlh
-veAAoIpIMowzC9XRY350Fx3xs+qvQl8A
-=J0MJ
+iEYEARECAAYFAkog8ScACgkQqj4ysMWt/vuNZQCeOPzSRR+r6/tQ/wCGWMEWvstE
+50gAoIIy7KupsBuVvT5TNpHdH7x9HZjh
+=TL/j
 -----END PGP SIGNATURE-----
