@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/maruku/Attic/maruku-0.5.9.ebuild,v 1.1 2008/09/02 06:04:27 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/maruku/Attic/maruku-0.5.9.ebuild,v 1.2 2009/05/30 08:40:57 graaff Exp $
 
 inherit ruby gems
 
@@ -18,7 +18,7 @@ RDEPEND="${DEPEND}"
 
 pkg_postinst() {
 	elog
-	elog "You need to emerge app-text/tetex and dev-tex/latex-unicode if"
+	elog "You need to emerge app-text/texlive and dev-tex/latex-unicode if"
 	elog "you want to use --pdf with Maruku. You may also want to emerge"
 	elog "dev-tex/listings to enable LaTeX syntax highlighting."
 	elog
